name:                redo
version:             0.2.0
synopsis:            software build system, make replacement, implementation of djb's redo
description:         redo builds a target file from source files using a "do" script. It also tracks when source files have changed and rebuilds target files as necessary.
homepage:            https://github.com/jekor/redo
bug-reports:         https://github.com/jekor/redo/issues
license:             PublicDomain
license-file:        LICENSE
author:              Chris Forno (jekor)
maintainer:          jekor@jekor.com
category:            Distribution
build-type:          Custom
cabal-version:       >=1.8
tested-with:         GHC == 7.6.2

source-repository    head
  type:              git
  location:          git://github.com/jekor/redo.git

executable redo
  main-is:             redo.hs
  build-depends:       base >= 4 && < 5,
                       bytestring,
                       containers >= 0.5,
                       directory,
                       filepath,
                       process,
                       pureMD5
  extensions:          ScopedTypeVariables
  ghc-options:         -Wall -fno-warn-missing-signatures